added css on hydrating components with state

--- a/PLAYGROUND/client/index.html
+++ b/PLAYGROUND/client/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/dist/output.css" rel="stylesheet" />
     <link rel="stylesheet" href="index.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
     <title>LatchQL Playground</title>
   </head>
   <body>
